--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
     
   },
-  "author": "",
+  "author": "nmaddp199599@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    
+    
   }
 }
