--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "nmaddp199599@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2",
+    "express": "^4.15.2"
     
     
   }
