--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "nmaddp199599@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2",
-    "body-parser" :  "^1.17.1"
+    "express": "^4.15.2"
+   
     
     
   }
